# quantum-proof-bitcoin

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  SECURITY.md  SPEC.md  docker-compose.3node.yml  docker-compose.shrincs.yml  docker-compose.yml  monitor_shrincs.sh  qpb.example.toml
.github/: ci-windows-env.py
.github/workflows/: ci.yml  docker.yml  gatekeeper.yml  measured-bench.yml  ml-dsa-44-advisory-ledger.yml  ml-dsa-44-cbmc-reproduction.yml  (+5 more)
.qpb/: index.json  state.json  utxo.json
benches/: shrincs_bench.rs
ci/: test_imagefile
cmake/: crc32c.cmake  introspection.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake
doc/: README.md  benchmarking.md  files.md  init.md  pqbtc-conf.md  productivity.md
docs/: ALG_ID_PARSER_COMPAT.md  ALG_ID_REGISTRY.md  CI.md  CI_COMPLETENESS.md  CONSENSUS_DIFFS.md  CONSENSUS_SURFACE.md  CORE_DIFF_PLAN.md  CREATEMULTISIG_POSTURE.md  CREATEWALLETDESCRIPTOR_POSTURE.md  DECISION_DEFERRAL_LEDGER.md  FEATURE_ASSUMEUTXO_POSTURE.md  FEATURE_ASSUMEVALID_POSTURE.md  FEATURE_BIP68_SEQUENCE_POSTURE.md  FEATURE_BLOCKSDIR_POSTURE.md  FEATURE_BLOCKSXOR_POSTURE.md  FEATURE_BLOCK_POSTURE.md  FEATURE_CLTV_POSTURE.md  FEATURE_COINSTATSINDEX_POSTURE.md  FEATURE_CONFIG_ARGS_POSTURE.md  FEATURE_CSV_ACTIVATION_POSTURE.md  FEATURE_FASTPRUNE_POSTURE.md  FEATURE_INDEX_PRUNE_POSTURE.md  FEATURE_LOADBLOCK_POSTURE.md  FEATURE_PQSIG_BASIC_POSTURE.md  FEATURE_PQSIG_MULTISIG_POSTURE.md  FEATURE_PQ_BLOCK_LIMITS_POSTURE.md  FEATURE_PQ_REORG_POSTURE.md  FEATURE_PRUNING_POSTURE.md  FEATURE_REINDEX_INIT_POSTURE.md  FEATURE_REINDEX_POSTURE.md  FEATURE_REINDEX_READONLY_POSTURE.md  FEATURE_REMOVE_PRUNED_FILES_ON_STARTUP_POSTURE.md  FEATURE_UTXO_SET_HASH_POSTURE.md  FEATURE_VERSIONBITS_WARNING_POSTURE.md  GA_ACCEPTANCE_CHECKLIST.md  GA_BURNIN_LOG.md  GENESIS.md  GENESIS_AND_NETWORK_POSTURE.md  MEMPOOL_ACCEPT_POSTURE.md  MEMPOOL_ACCEPT_WTXID_POSTURE.md  (+97 more)
ffi/: README.md  shrincs.c
scripts/: check.sh  monitor_shrincs.sh  shrincs_test.sh  testnet-soak.sh
share/: setup.nsi.in
src/: CMakeLists.txt  activation.rs  address.rs  bitcoin-cli-res.rc  bitcoin-tx-res.rc  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoin.cpp  bitcoind-res.rc  bitcoind.cpp  clientversion.cpp  constants.rs  core_write.cpp  deploymentinfo.cpp  errors.rs  hashing.rs  init.cpp  lib.rs  mining.rs  pow.rs  pq.rs  psbt.cpp  psbt.h  reward.rs  script.rs  sighash.rs  types.rs  validation.cpp  validation.rs  varint.rs  weight.rs
src/wallet/: CMakeLists.txt  dump.cpp  external_signer_scriptpubkeyman.cpp  pq_scriptpubkeyman.cpp  pq_scriptpubkeyman.h  scriptpubkeyman.h  spend.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  walletutil.h
src/wallet/rpc/: addresses.cpp  backup.cpp  coins.cpp  spend.cpp  util.cpp  util.h  wallet.cpp
src/wallet/test/: CMakeLists.txt  feebumper_tests.cpp  pq_wallet_tests.cpp  psbt_wallet_tests.cpp  spend_tests.cpp  util.h  wallet_tests.cpp  walletload_tests.cpp
src/wallet/test/fuzz/: spend.cpp
test/: README.md
tests/: activation_integration.rs  address.rs  basic.rs  feeest.rs  getblocktemplate.rs  locktime.rs  mempool_persist.rs  network_hardening.rs  node_phase0a.rs  node_phase0b2.rs  node_phase0b3_rpc.rs  node_phase1a_p2p.rs  node_phase1b1_p2p_multi.rs  node_phase2a_mine.rs  node_phase3_reorg.rs  node_rpc_stop.rs  node_storage.rs  orphan_pool.rs  rbf.rs  rpc_auth.rs  shrincs_ffi.rs  shrincs_phase2.rs  shrincs_roundtrip.rs  shrincs_stress.rs  tx_relay.rs  txindex.rs  vectors.rs  wallet.rs  wallet_e2e.rs  wallet_encryption.rs  wallet_rpc.rs
vectors/: p2qpkh_invalid_alg11.json  p2qpkh_invalid_alg21.json  p2qpkh_invalid_alg30.json  p2qpkh_invalid_pkser.json  p2qpkh_invalid_pkser_shrincs.json  p2qpkh_invalid_sig.json  p2qpkh_invalid_sig_shrincs.json  p2qpkh_valid.json  p2qpkh_valid_shrincs.json  p2qtsh_invalid_control.json  p2qtsh_valid.json  shrincs_sizes.json
(+408 files in other folders)
