[package]
name = "qpb-consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex-literal = "0.4"
thiserror = "1.0"
byteorder = "1.5"
argon2 = "0.5"
hex = "0.4"
ripemd = "0.1"
rayon = { version = "1.8", optional = true }
libloading = { version = "0.8", optional = true }
once_cell = { version = "1.19", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = "0.8"
base64 = "0.21"
criterion = { version = "0.5", optional = true }

[features]
default = []
parallel-mine = ["rayon"]
shrincs-ffi = ["libloading", "once_cell"]
cli-vectors = ["serde", "serde_json"]
benches-shrincs = ["criterion"]

[build-dependencies]
cc = { version = "1.0", optional = true }

[[bench]]
name = "shrincs_bench"
harness = false
