[package]
name = "qpb-consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
hex-literal = "0.4"
thiserror = "1.0"
byteorder = "1.5"
argon2 = "0.5"
hex = "0.4"
ripemd = "0.1"
rayon = { version = "1.8", optional = true }
libloading = { version = "0.8", optional = true }
once_cell = { version = "1.19", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
base64 = "0.21"
tiny_http = "0.12"
criterion = { version = "0.5", optional = true }
pqcrypto-sphincsplus = { version = "0.7", default-features = false, optional = true }
pqcrypto-traits = { version = "0.3", default-features = false }
anyhow = "1.0"
bech32 = "0.9"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
tempfile = "3.10"
fs2 = "0.4"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
parallel-mine = ["rayon"]
shrincs-ffi = ["libloading", "once_cell"]
shrincs-dev = ["shrincs-ffi", "pqcrypto-sphincsplus"]
cli-vectors = []
benches-shrincs = ["criterion"]

[build-dependencies]
cc = { version = "1.0", optional = true }

[[bin]]
name = "qpb-cli"
path = "src/bin/qpb-cli.rs"

[[bin]]
name = "gen_vectors"
path = "src/bin/gen_vectors.rs"

[[bin]]
name = "gen_chainparams"
path = "src/bin/gen_chainparams.rs"

[[bin]]
name = "qpb-wallet"
path = "src/bin/qpb-wallet.rs"

[[bin]]
name = "bench_perf"
path = "src/bin/bench_perf.rs"

[[bench]]
name = "shrincs_bench"
harness = false
